# GiraffeCV

./: LICENSE  README.md
Projects/: CMakeLists.txt
Projects/Common/Utils/GiraffeLogger/: GiraffeLogger.cpp
Projects/Include/Common/Buffers/: GDataFrameQueue.h  GSimpleQueue.h  GTaskQueue.h
Projects/Include/Common/CUDA/: GCUDATextureObject.cuh  GCUDAUtils.cuh
Projects/Include/Common/Camera/: GCameraType.h
Projects/Include/Common/DllExport/: GCallConvention.h  GDllExport.h
Projects/Include/Common/Exception/: GiraffeChecker.h  GiraffeException.h
Projects/Include/Common/FrameFormat/: GCFrameFormat.h  GFrameFormatUtils.h
Projects/Include/Common/GiraffeLogger/: GiraffeLogger.h
Projects/Include/Common/HandleMapper/: GHandleMapper.h
Projects/Include/Common/LanguageSwitch/: GCPPCUDASwitch.h
Projects/Include/Common/Math/: GMathConstants.h
Projects/Include/Common/Memory/: GiraffeSharedPtr.h
Projects/Include/Common/OpenCVUtils/: OpenCVUtils.h
Projects/Include/Common/Timer/: GiraffeTimer.h
Projects/Include/FeatherRPC/: GFeatherMessage.h  GFeatherMetaProgramming.h  GFeatherRPCClient.h  GFeatherRPCServer.h
Projects/Include/Geometry/GeometryBase/: GBasicProjectors.h  GCameraProjectors.h  GHomogeneousCoordinate.h
Projects/Include/VideoSource/: GCVideoSourceErrorIF.h  GCVideoSourceIF.h
Projects/Include/VideoStitching/PanoRender/: GPanoRenderOGLIF.h
Projects/UI/: CMakeLists.txt
Projects/UI/PanoPlayer/: CMakeLists.txt  GPanoRenderQWidget.cpp  GPanoRenderQWidget.h  PanoPlayer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
Projects/VideoSource/: CMakeLists.txt
Projects/VideoSource/VideoSource/: CMakeLists.txt
Projects/VideoSource/VideoSource/Common/: GCVideoSourceIF.cpp  GVideoSource.cpp
Projects/VideoSource/VideoSource/Include/: GVideoSource.h
Projects/VideoStitching/: CMakeLists.txt
Projects/VideoStitching/VideoStitching/: CMakeLists.txt
Projects/VideoStitching/VideoStitching/Common/: GFileUtils.cpp  GGLError.cpp  GGeometricProjectors.cpp
Projects/VideoStitching/VideoStitching/Include/Common/: GCameraModel.h  GFileUtils.h  GGLError.h  GGLHeaders.h  GGeometricProjectors.h  GPanoCameraInfo.h  GPanoTypeConverter.h  GPortableArchive.h  GRenderProjectors.h  GSerialization.h  VideoStitcherException.h
Projects/VideoStitching/VideoStitching/Include/PanoRender/: GFrameQueueIF.h  GOpenGLFrameBuffer.h  GOpenGLObjectsIF.h  GOpenGLPixelBuffer.h  GPanoRenderCommonIF.h  GPanoSceneIF.h  GSurfaceGeneratorIF.h
Projects/VideoStitching/VideoStitching/PanoRender/: CMakeLists.txt
Projects/VideoStitching/VideoStitching/PanoRender/PanoEngine/Common/: GGlobalParametersManager.cpp  GGlobalParametersManager.h  GPanoTypeStaticParameters.h
Projects/VideoStitching/VideoStitching/PanoRender/PanoEngine/FrameQueue/: GFrameQueueIF.cpp
Projects/VideoStitching/VideoStitching/PanoRender/PanoEngine/OpenGL/: GOpenGLFrameBuffer.cpp  GOpenGLPixelBuffer.cpp
Projects/VideoStitching/VideoStitching/PanoRender/PanoEngine/PanoScene/: GGLSLProgramGenerator.cpp  GGLSLProgramGenerator.h  GPanoScene.cpp  GPanoScene.h  GPanoSceneIF.cpp  GProjectorObjects.cpp  GProjectorObjects.h  GRenderScene.cpp  GRenderScene.h  GSurfaceGenerator.cpp  GSurfaceGenerator.h
Projects/VideoStitching/VideoStitching/PanoRender/PanoEngine/Render/: GDataTransfer.cpp  GDataTransfer.h  GDownChannels.cpp  GDownChannels.h  GRender.cpp  GRender.h
Projects/VideoStitching/VideoStitching/PanoRender/PanoEngine/RenderParaManager/: GRenderParaManager.cpp  GRenderParaManager.h  GViewCamera.cpp  GViewCamera.h
Projects/VideoStitching/VideoStitching/PanoRender/PanoRender/: GPanoRenderOGL.cpp  GPanoRenderOGL.h  GPanoRenderOGLIF.cpp
Projects/VideoStitching/VideoStitching/PanoRender/Testers/: GPanoRenderOGLTester.cpp  GPanoRenderOGLTester_Win32.cpp  GTesterConfig.cpp  GTesterConfig.h
cmake/: BaseConfig.cmake
